--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -6,21 +6,21 @@ repository: https://github.com/Stacked-Org/firebase_auth.git
 issue_tracker: https://github.com/Stacked-Org/framework/issues
 
 environment:
-  sdk: ">=3.0.0 <4.0.0"
+  sdk: '>=3.0.0 <4.0.0'
 
 dependencies:
   flutter:
     sdk: flutter
 
   # Firebase
-  firebase_core: ^2.32.0
-  firebase_auth: ^4.20.0
-  firebase_auth_platform_interface: ^7.0.0
+  firebase_core: ^3.1.1
+  firebase_auth: ^5.1.1
+  firebase_auth_platform_interface: ^7.4.1
 
   # Firebase Authentications
   google_sign_in: ^6.2.1
   sign_in_with_apple: ^6.1.1
-  flutter_facebook_auth: ^6.2.0
+  flutter_facebook_auth: ^7.0.1
 
   # logging
   logger: ^2.3.0
